add further styling to landing page

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,8 +4,9 @@ $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
 //Colors
-$one: rgb(70, 45, 240);
-$two: rgb(102, 62, 175);
-$three: #49b68f;
-$four: #d1740d;
-$five: #fff8c8;
+$one: #54786a;
+$two: #ded18d;
+$three: #aa5725;
+$four: #efcf83;
+$five: #624b1c;
+$six: #ac8269;
