--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -1,3 +1,5 @@
+@use "../../styles/partials/variables" as *;
+
 .nav {
   width: 100%;
   display: flex;
@@ -5,14 +7,14 @@
   justify-content: center;
   margin: 0 auto;
   padding: 2rem;
-  background-color: red;
+  background-color: #54786a;
   height: 14vh;
 
   &__list {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 30%;
+    width: 40%;
   }
 
   &__container {
@@ -24,5 +26,10 @@
   }
   &__logo {
     height: 14vh;
+  }
+  &__item {
+    color: #ded18d;
+    font-size: 1.5rem;
+    font-weight: bold;
   }
 }
