--- a/src/components/products/Products.scss
+++ b/src/components/products/Products.scss
@@ -1,11 +1,10 @@
-.nav {
+.products {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
   padding: 2rem;
-  background-color: red;
 
   &__list {
     display: flex;
