--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -1,5 +1,5 @@
 @use "../../styles/partials/variables" as *;
-@import url("https://fonts.googleapis.com/css2?family=Capriola&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Krona+One&display=swap");
 html {
   font-size: 62.5%;
 }
@@ -9,10 +9,11 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-size: 1.6rem;
-  font-family: "Capriola", sans-serif;
+  font-family: "Krona One", sans-serif;
   min-height: 100vh;
   position: relative;
   overflow-x: hidden;
+  // background-color: #54786a;
 }
 body::-webkit-scrollbar {
   display: none;
