--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Krona+One&display=swap");
 
 .about {
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
+  background-color: #ded18d;
+
   &__container {
     display: flex;
     align-items: flex-start;
@@ -19,20 +22,28 @@
   }
   &__building {
     width: 65%;
-    border-radius: 0 0 10rem 10rem;
+    border-radius: 0 0 3rem 0;
   }
   &__landing {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-    padding: 3rem;
+    padding: 3rem 0 3rem 3rem;
     height: 160vh;
   }
 
   &__title {
     text-align: center;
     font-size: 7.5rem;
+    font-family: "Krona One", sans-serif;
+    background: rgb(84, 120, 106);
+    background: linear-gradient(
+      90deg,
+      rgba(84, 120, 106, 0) 20%,
+      rgba(84, 120, 106, 1) 80%
+    );
+    margin: 1rem 0;
   }
 
   &__sub {
@@ -40,6 +51,13 @@
     font-size: 4rem;
     margin-top: 5rem;
     width: 70%;
+    background: rgb(84, 120, 106);
+    background: linear-gradient(
+      90deg,
+      rgba(84, 120, 106, 0) 20%,
+      rgba(84, 120, 106, 1) 80%
+    );
+    width: 100%;
   }
 
   &__p {
@@ -48,5 +66,12 @@
     margin-top: 5rem;
     font-family: "DM Sans", sans-serif;
     width: 60%;
+    background: rgb(84, 120, 106);
+    background: linear-gradient(
+      90deg,
+      rgba(84, 120, 106, 0) 20%,
+      rgba(84, 120, 106, 1) 80%
+    );
+    width: 100%;
   }
 }
