--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -7,7 +7,8 @@
   justify-content: center;
   margin: 0 auto;
   padding: 2rem;
-  background-color: #54786a;
+  // background-color: #54786a;
+  background-color: #2b3f37;
   height: 14vh;
 
   &__list {
