--- a/src/components/products/Products.scss
+++ b/src/components/products/Products.scss
@@ -3,20 +3,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
-  padding: 2rem;
-
-  &__list {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 30%;
-  }
-
-  &__container {
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+  height: 100vh;
 }
