--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -6,7 +6,7 @@
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  background-color: #ded18d;
+  background-color: #2b3f37;
 
   &__container {
     display: flex;
