--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   height: 40vh;
-  background-color: #54786a;
+  background-color: #2b3f37;
   width: 100%;
   display: flex;
   align-items: center;
