--- a/src/components/about-bottom/about-bottom.scss
+++ b/src/components/about-bottom/about-bottom.scss
@@ -22,15 +22,14 @@
 
   &__card {
     background-color: white;
-
     border-radius: 3rem;
-    width: 25%;
+    width: 20%;
     height: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    // position: absolute;
+    padding: 4rem 2rem;
   }
 
   &__title {
@@ -40,7 +39,7 @@
   }
 
   &__img {
-    width: 100%;
+    width: 90%;
   }
   &__text {
     text-align: center;
