--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -14,6 +14,7 @@ body {
   position: relative;
   overflow-x: hidden;
   font-family: "DM Sans", sans-serif;
+  background-color: #2b3f37;
 }
 body::-webkit-scrollbar {
   display: none;
