--- a/src/components/about/about-OmarPC.scss
+++ b/src/components/about/about-OmarPC.scss
@@ -34,16 +34,18 @@
   }
 
   &__title {
+    padding: 1rem;
     text-align: center;
-    font-size: 5.5rem;
+    font-size: 7.5rem;
     font-family: "Krona One", sans-serif;
     background: rgb(84, 120, 106);
-    background: linear-gradient(
-      90deg,
-      rgba(84, 120, 106, 0) 20%,
-      rgba(84, 120, 106, 1) 80%
-    );
+    // background: linear-gradient(
+    //   90deg,
+    //   rgba(84, 120, 106, 0) 20%,
+    //   rgba(84, 120, 106, 1) 80%
+    // );
     margin: 1rem 0;
+    border-radius: 0.5rem;
   }
 
   &__sub {
@@ -64,6 +66,7 @@
     text-align: center;
     font-size: 2rem;
     margin-top: 5rem;
+    padding: 0.6rem;
     font-family: "DM Sans", sans-serif;
     width: 60%;
     background: rgb(84, 120, 106);
